--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
         <p>Watch anywhere. Cancel anytime</p>
 
         <a href="#" class="btn btn-xl"
-          >Watch Free For 30 Days <i class="fa-solid fa-chevron-right"></i
+          >Watch Free For 30 Days <i class="fa-solid fa-chevron-right btn-icon"></i
         ></a>
       </div>
     </header>
     <!-- Header Start -->
 
     <!-- Tab Section Start -->
-
     <section class="tabs">
       <div class="container">
         <div id="tab-1" class="tab-item tab-border">
@@ -52,52 +51,57 @@
         </div>
       </div>
     </section>
-
     <!-- Tab Section End -->
 
     <!-- Tab/Content Section Start -->
     <section class="tab-content">
       <div class="container">
         <!-- Tab Content 1 -->
-        <!-- <div id="tab-1-content" class="tab-content-item show">
-                <div class="tab-1-content-inner">
-                    <div>
-                        <p class="text-lg">
-                            If you decide Netflix isn't for you - no problem. No commitment. Cancel online anytime.
-                        </p>
-                        <a href="#" class="btn btn-lg">Watch Free For 30 Days</a>
-                    </div>
-                    <img src="https://i.ibb.co/J2xDJV7/tab-content-1.png" alt="" />
-                </div>
-            </div> -->
+        <div id="tab-1-content" class="tab-content-item show">
+          <div class="tab-1-content-inner">
+            <div>
+              <p class="text-lg">
+                If you decide Netflix isn't for you - no problem. No commitment.
+                Cancel online anytime.
+              </p>
+              <a href="#" class="btn btn-lg">Watch Free For 30 Days</a>
+            </div>
+            <img src="https://i.ibb.co/J2xDJV7/tab-content-1.png" alt="" />
+          </div>
+        </div>
 
         <!-- Tab Content 2 -->
-        <!-- <div id="tab-2-content" class="tab-content-item">
-                <div class="tab-2-content-top">
-                    <p class="text-lg">
-                        Watch TV shows and movies anytime, anywhere - personalized for you.
-                    </p>
-                    <a href="#" class="btn btn-lg">Watch Free For 30 Days</a>
-                </div>
-                <div class="tab-2-content-bottom">
-                    <div>
-                        <img src="https://i.ibb.co/DpdN7Gn/tab-content-2-1.png" alt="" />
-                        <p class="text-md">Watch on your TV</p>
-                        <p class="text-dark">Smarts TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
-                    </div>
-                    <div>
-                        <img src="https://i.ibb.co/R3r1SPX/tab-content-2-2.png" alt="" />
-                        <p class="text-md">Watch 'nstantly or download for later</p>
-                        <p class="text-dark">Ava'lable on phone and tablet\ wherever you go.</p>
-                    </div>
-                    <div>
-                        <img src="https://i.ibb.co/gDhnwWn/tab-content-2-3.png" alt="" />
-                        <p class="text-md">Use any computer</p>
-                        <p class="text-dark">Watch right on Netflix.com.</p>
-                    </div>
-                    
-                </div>
-            </div> -->
+        <div id="tab-2-content" class="tab-content-item">
+          <div class="tab-2-content-top">
+            <p class="text-lg">
+              Watch TV shows and movies anytime, anywhere - personalized for
+              you.
+            </p>
+            <a href="#" class="btn btn-lg">Watch Free For 30 Days</a>
+          </div>
+          <div class="tab-2-content-bottom">
+            <div>
+              <img src="https://i.ibb.co/DpdN7Gn/tab-content-2-1.png" alt="" />
+              <p class="text-md">Watch on your TV</p>
+              <p class="text-dark">
+                Smarts TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray
+                players and more.
+              </p>
+            </div>
+            <div>
+              <img src="https://i.ibb.co/R3r1SPX/tab-content-2-2.png" alt="" />
+              <p class="text-md">Watch 'nstantly or download for later</p>
+              <p class="text-dark">
+                Ava'lable on phone and tablet\ wherever you go.
+              </p>
+            </div>
+            <div>
+              <img src="https://i.ibb.co/gDhnwWn/tab-content-2-3.png" alt="" />
+              <p class="text-md">Use any computer</p>
+              <p class="text-dark">Watch right on Netflix.com.</p>
+            </div>
+          </div>
+        </div>
 
         <!-- Tab Content 3 -->
         <div id="tab-3-content" class="tab-content-item">
@@ -125,46 +129,46 @@
                 <td>$15.99</td>
               </tr>
               <tr>
-                  <td>HD Available</td>
-                  <td><i class="fas fa-times"></i></td>
-                  <td><i class="fas fa-check"></i></td>
-                  <td><i class="fas fa-check"></i></td>
+                <td>HD Available</td>
+                <td><i class="fas fa-times"></i></td>
+                <td><i class="fas fa-check"></i></td>
+                <td><i class="fas fa-check"></i></td>
               </tr>
               <tr>
-                  <td>Ultra HD Available</td>
-                  <td><i class="fas fa-times"></i></td>
-                  <td><i class="fas fa-times"></i></td>
-                  <td><i class="fas fa-check"></i></td>
+                <td>Ultra HD Available</td>
+                <td><i class="fas fa-times"></i></td>
+                <td><i class="fas fa-times"></i></td>
+                <td><i class="fas fa-check"></i></td>
               </tr>
               <tr>
-                  <td>Screens you can watch on at the same time</td>
-                  <td>1</td>
-                  <td>2</td>
-                  <td>4</td>
+                <td>Screens you can watch on at the same time</td>
+                <td>1</td>
+                <td>2</td>
+                <td>4</td>
               </tr>
               <tr>
-                  <td>Watch on your laptop, TV, phone and tablet</td>
-                  <td><i class="fas fa-check"></i></td>
-                  <td><i class="fas fa-check"></i></td>
-                  <td><i class="fas fa-check"></i></td>
+                <td>Watch on your laptop, TV, phone and tablet</td>
+                <td><i class="fas fa-check"></i></td>
+                <td><i class="fas fa-check"></i></td>
+                <td><i class="fas fa-check"></i></td>
               </tr>
               <tr>
-                  <td>Unlimited movies and TV shows</td>
-                  <td><i class="fas fa-check"></i></td>
-                  <td><i class="fas fa-check"></i></td>
-                  <td><i class="fas fa-check"></i></td>
+                <td>Unlimited movies and TV shows</td>
+                <td><i class="fas fa-check"></i></td>
+                <td><i class="fas fa-check"></i></td>
+                <td><i class="fas fa-check"></i></td>
               </tr>
               <tr>
-                  <td>Cancel anytime</td>
-                  <td><i class="fas fa-check"></i></td>
-                  <td><i class="fas fa-check"></i></td>
-                  <td><i class="fas fa-check"></i></td>
+                <td>Cancel anytime</td>
+                <td><i class="fas fa-check"></i></td>
+                <td><i class="fas fa-check"></i></td>
+                <td><i class="fas fa-check"></i></td>
               </tr>
               <tr>
-                  <td>First month free</td>
-                  <td><i class="fas fa-check"></i></td>
-                  <td><i class="fas fa-check"></i></td>
-                  <td><i class="fas fa-check"></i></td>
+                <td>First month free</td>
+                <td><i class="fas fa-check"></i></td>
+                <td><i class="fas fa-check"></i></td>
+                <td><i class="fas fa-check"></i></td>
               </tr>
             </tbody>
           </table>
@@ -172,5 +176,40 @@
       </div>
     </section>
     <!-- Tab/Content Section End -->
+
+    <!-- Footer Start -->
+    <footer class="footer">
+      <p>Questions? Call 1-866-579-7172</p>
+      <div class="footer-cols">
+        <ul>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Investor Relations</a></li>
+          <li><a href="#">Ways To Watch</a></li>
+          <li><a href="#">Corporate Information</a></li>
+          <li><a href="#">Netflix Originals</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Help Center</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Terms Of Use</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Account</a></li>
+          <li><a href="#">Redeem Gift Cards</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Speed Test</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Media Center</a></li>
+          <li><a href="#">Buy Gift Cards</a></li>
+          <li><a href="#">Cookie Preferences</a></li>
+          <li><a href="#">Legal Notices</a></li>
+        </ul>
+      </div>
+    </footer>
+    <!-- Footer End -->
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
